--- a/style.css
+++ b/style.css
@@ -3,19 +3,25 @@
 * {
   background-color: transparent;
   color: @foreground;
+  margin-top: 2px;
+  margin-bottom: 2px;
   border: none;
-  border-radius: 0;
-  min-height: 0;
+  border-radius: 12px;
+  min-height: 0px;
   font-family: 'GohuFont 11 Nerd Font';
   font-size: 13px;
 }
 
 .modules-left {
+  padding: 0 6px;
   margin-left: 8px;
+   background-color: alpha(#232634, 0.5);
 }
 
 .modules-right {
+  padding: 0 6px;
   margin-right: 8px;
+  background-color: alpha(#232634, 0.5);
 }
 
 #workspaces button {
@@ -64,7 +70,9 @@ tooltip {
 }
 
 #clock {
+  padding: 0 8px;
   margin-left: 8.75px;
+  background-color: alpha(#232634, 0.5);
 }
 
 .hidden {
